--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Playwrite NG Modern", cursive;
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+
 }
 
 html,
