--- a/style.css
+++ b/style.css
@@ -114,14 +114,17 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
-        font-size: 6vw;
+        font-size: 8vw;
+    }
+
+    #countDown{
+        font-size: 5vw;
     }
 }
 
 /* for tablet screen */
 @media (min-width:481px) and (max-width:1024px) {
     .middle {
-        /* background-color: red; */
         position: absolute;
         top: 50%;
         left: 50%;
